Bug 1601306 - When partial update fails, make sure that mIsOpaque and mForceTransparentSurface on the root display list are false. r=tnikkel

These values start out false in the other two ways display lists can be build:
 - Without retained display lists, a new nsDisplayList object is created which starts out with these values being false.
 - When partial update succeeds (or at least gets far enough to run PreProcessDisplayList), RestoreState() is called on the root display list which sets these values to false.

But when partial update fails, we have an old nsDisplayList object and we were not clearing those values.

Differential Revision: https://phabricator.services.mozilla.com/D55866